Fix bug where winner is not displayed when board is full, also fix player names alignement when clicking start

--- a/style.css
+++ b/style.css
@@ -34,7 +34,24 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 20px; 
+    justify-content: center;
+    gap: 15px; 
+
+}
+
+.VS {
+    padding-left: 12px;
+}
+
+.live-names {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    padding-top: 40px;
+    font-size: 25px;
+
 }
 
 input {
@@ -43,9 +60,6 @@ input {
     border-radius: 10px; 
 }
 
-.VS {
-    padding-left: 15px;
-}
 
 button {
     margin-top: -5px;
